--- a/doc/CHANGELOG
+++ b/doc/CHANGELOG
@@ -5,6 +5,11 @@ All notable changes to this project will be documented in this file.
 The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
 and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).
 
+## 0.1.2
+### Added
+ - A new Docker image with verdaccio + minio plugin installed
+ - A release scripts for bumping version, publishing on NPM and on Docker Hub
+
 ## 0.1.1
 ### Changed
  - Remove postinstall hook which may cause install to fail because of missing scripts
