--- a/CHANGELOG
+++ b/CHANGELOG
@@ -5,6 +5,11 @@ All notable changes to this project will be documented in this file.
 The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
 and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).
 
+## 0.2.1
+### Changed
+ - Fix the error code thrown by the storage ([issue #2](https://github.com/barolab/verdaccio-minio/issues/2))
+ - Perform acceptance checks on multiple Verdaccio versions
+
 ## 0.2.0
 ### Breaking changes
 
