Add missing changelog entry for 0.2.3

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -5,6 +5,11 @@ All notable changes to this project will be documented in this file.
 The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
 and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).
 
+## 0.2.3
+### Changed
+ - Fix an error when publishing packages, with the artifact on minio being empty
+ - Remove the local storage (cache) so multiple instances of Verdaccio connected to the same minio backend are always in sync.
+
 ## 0.2.1
 ### Changed
  - Fix the error code thrown by the storage ([issue #2](https://github.com/barolab/verdaccio-minio/issues/2))
