--- a/CHANGELOG
+++ b/CHANGELOG
@@ -5,6 +5,12 @@ All notable changes to this project will be documented in this file.
 The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
 and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).
 
+## 0.2.4
+### Changed
+ - Add support for Verdaccio 4.4
+ - Add retry mechanism on Bucket initialization
+ - Updated dependencies
+
 ## 0.2.3
 ### Changed
  - Fix an error when publishing packages, with the artifact on minio being empty
